wwwroot/src/scss/_layout.scss
/* Layout
  =============== */
@import 'variables';
@import 'typography';

body,
html {
    min-width: 1440px;
    min-height: 500px;
    padding: 10px;
    overflow-x: hidden;
    background-color: $c-black;
    font-family: $f-gcutive;

    h1.author {
        font-size: 0.5rem;
        color: #E88024;
    }

    #numLabel {
        color: $c-white;
        float: left;
        padding: 0 20px;
    }

    #submit {
        margin-top: -2px;
        height: 66px;
        line-height: 65px;
        padding-top: 0;
        background-color: orange;
        color: $c-pd-dk-purp;
    }

    #tpCount {
        background-color: rgba(210, 179, 242, 1);
        color: $c-pd-dk-purp;
        line-height: 27px;
        max-width: 100px;
    }

    #div1 {
        position: absolute;
        top: 0;
        left: 0;
        background-color: rgb(102, 51, 153);
        height: 108px;
        padding: 20px 0;
        font-size: 60%;
    }

    #div3 {
        margin-bottom: 30px;
        padding-top: 100px;
    }

    #dataTbl {
        th {
            text-align: center;
            padding-left: 3em;
            border-color: orange;
            margin-bottom: 20px;
            background-color: $c-pd-purp;
            color: $c-pd-dk-purp;
        }
    }

    span.nameCell {
        position: relative;

        &::after {
            content: '';
            position: absolute;
            left: 0;
            top: 0;
            height: 100%;
            width: 100%;
            opacity: 0;
            display: block;
            background-color: rgb(244, 169, 102);
            transition: all 0.4s ease-in-out;
        }
    }

    span.nameCell:hover:after {
        opacity: 0.3;
        width: 100%;
    }

    span.tpName {
        font-size: 0.6rem;
        color: $c-greyblue;
        height: 60px;
        line-height: 60px;
        overflow: hidden;
        text-overflow: ellipsis;
        padding: 5px 0;

        &:hover {
            color: $c-pd-purp;
        }
    }

    i.fa-spinner {
        color: #E88024;
    }

    .fa .fa-smile-o:before {
        color: $c-green;
        opacity: 0.8;

        &::before {
            color: $c-green;
        }

        &:hover {
            opacity: 1;
        }
    }

    .fa .fa-frown-o {
        opacity: 0.8;

        &::before {
            color: $c-red;
        }

        &:hover {
            opacity: 1;
        }
    }

    .social_icons {
        position: fixed;
        top: 15px;
        right: 15px;
        color: $c-redr;
        font-size: 0.6rem;

        .small-30 {
            input[type='text'] {
                background: transparent !important;
                border: none;
                outline: none;

                &:focus {
                    border: none;
                    outline: none;
                }
            }
        }

        ul {
            margin: 0;

            li {
                list-style-type: none;
                display: inline;
                margin: 0 3px;

                a {
                    i {
                        color: $c-redr;
                    }
                }
            }
        }
    }

    nav {
        height: 300px;
        background-color: $c-black;

        ul {
            list-style: none;
        }

        a {
            color: $c-yellow;
        }

        h1 {
            font-size: 0.8rem;
            color: $c-redr;
            font-family: $f-gcutive;
            margin: 0;
            max-width: 235px;
        }
    }
}

div {
    min-height: 80px;
    width: 100%;
}

.icon {
    display: inline-block;
    width: 1em;
    height: 1em;
    stroke-width: 0;
    stroke: $c-green;
    fill: $c-green;
}

